Update scaffold and sync for Zsuzsi

--- a/combinatorial_integration_of_weight_systems.tex
+++ b/combinatorial_integration_of_weight_systems.tex
@@ -2,7 +2,7 @@
 \label{ch:combinatorial-integration_of_weight_systems}
 
 \begin{mdframed}
-	See the .tex comments about questions I still have about this section. (some now answered)
+	See the .tex comments about questions I still have about this section. (some now answered - will go in the previous section.)
 \end{mdframed}
 
 % NOTE:
