Some work on Chord diagram algebra structure and assoc gr

--- a/macros.tex
+++ b/macros.tex
@@ -5,6 +5,9 @@
 \newcommand{\T}{\mathbb{T}}
 \renewcommand{\S}{\mathbb{S}}
 
+% Common operations
+\newcommand{\gr}{\operatorname{gr}}
+
 % Crossings and singularities
 \newcommand*{\double}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_singular_point.pdf}}}
 \newcommand*{\poscross}{\adjustbox{valign=c}{\includegraphics[width=0.05\textwidth]{graphics/glyph_positive_crossing.pdf}}}
@@ -28,9 +31,9 @@
 \newcommand{\diff}{\texttt{DIFF}}
 
 % T4T and T1T, DIFF (as relations on singular knots)
-\newcommand{\tftdual}{\texttt{T4T}\ensuremath{^\ast}}
-\newcommand{\totdual}{\texttt{T1T}\ensuremath{^\ast}}
-\newcommand{\diffdual}{\texttt{DIFF}\ensuremath{^\ast}}
+\newcommand{\cotft}{\texttt{T4T}\ensuremath{^\ast}}
+\newcommand{\cotot}{\texttt{T1T}\ensuremath{^\ast}}
+\newcommand{\codiff}{\texttt{DIFF}\ensuremath{^\ast}}
 
 % 4T and 1T graphics
 \newcommand*{\ftsouth}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{four_term_south.pdf}}}
@@ -44,7 +47,7 @@
 \newcommand{\ft}{\texttt{4T}}
 \newcommand{\ot}{\texttt{1T}}
 
-% 4T and 1T, DIFF (as relations on chord diagrams)
-\newcommand{\ftdual}{\texttt{4T}\ensuremath{^\ast}}
-\newcommand{\otrel}{\texttt{1T}\ensuremath{^\ast}}
+% 4T and 1T (as relations on chord diagrams)
+\newcommand{\coft}{\texttt{4T}\ensuremath{^\ast}}
+\newcommand{\coot}{\texttt{1T}\ensuremath{^\ast}}
 
