--- a/setup.tex
+++ b/setup.tex
@@ -168,6 +168,7 @@
 
 \newtheorem{definition}[theorem]{Definition}
 \newtheorem{definitions}[theorem]{Definitions}
+\newtheorem{notation}[theorem]{Notation}
 \newtheorem{example}[theorem]{Example}
 \newtheorem{examples}[theorem]{Examples}
 \newtheorem{remark}[theorem]{Remark}
