Scaffold algebra section

--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -3,7 +3,7 @@
 
 \lettrine{\libertineInitialGlyph{V}}{assiliev} invariants are sophisticated to define in terms of the space of knots from the introduction, but the axiomatic definition of Birman-Lin \cite{knot-polynomials-and-vassilievs-invariants} is much simpler. The definition also illustrates an analogy first made by Bar-Natan \cite{on-the-vassiliev-knot-invariants} in which Vassiliev invariants are ``polynomial invariants''. This is not meant in the sense that Vassiliev invariants take values in a polynomial ring (like say, the Jones polynomial), but rather that Vassiliev invariants have special properties not shared by all invariants, just as polynomial functions have special properties not shared by all functions.
 
-\section{Singular Knots}
+\section{Singular knots}
 \label{sec:singular-knots}
 
 \begin{definition}
@@ -390,6 +390,16 @@ Just like with the \ref{eq:diff} and \ref{eq:codiff} relations, instead of study
 
 \begin{mdframed}
 	(Are we *free* to choose values on these? It feels like this is the point, but I keep hearing that it's open. What's the correct thing to say? Potentially there's a technical detail here.)
+\end{mdframed}
+
+\begin{mdframed}
+	Scaffold for this chapter.
+
+	\begin{itemize}
+		\item Begin with the connected sum on plain knots (don't talk about modding by 1T 4T yet).
+		\item This induces a connected sum on singular knots (define via commutative diagram).
+		\item This nearly induces a conntected sum on chord diagrams... except need to mod out by 4T and 1T which we were gonna do anyway.
+	\end{itemize}
 \end{mdframed}
 
 \begin{warning}
