Add: incomplete connect sum definition

--- a/macros.tex
+++ b/macros.tex
@@ -41,7 +41,7 @@
 \newcommand*{\ftnorth}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{four_term_north.pdf}}}
 \newcommand*{\ftwest}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{four_term_west.pdf}}}
 
-\newcommand*{\otgraphic}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{one-term.pdf}}}
+\newcommand*{\otgraphic}{\adjustbox{valign=c}{\includegraphics[width=0.11\textwidth]{one_term.pdf}}}
 
 % 4T and 1T (as relations on constants of integration)
 \newcommand{\ft}{\texttt{4T}}
