--- a/vassiliev_invariants_and_chord_diagrams.tex
+++ b/vassiliev_invariants_and_chord_diagrams.tex
@@ -361,46 +361,60 @@ In the Section \ref{sec:chord-diagrams-and-the-universal-Vassiliev-invariant} we
 \section{The algebra of chord diagrams}
 \label{sec:the-algebra-of-chord-diagrams}
 
+\begin{mdframed}
+	Scaffold for this chapter.
 
-Just like with the \ref{eq:diff} and \ref{eq:codiff} relations, instead of studying functions on chord diagrams satisfying \ref{eq:4T} and \ref{eq:1T}, we prefer to study functions on spaces quotiented by relations on the objects.
+	\(\cdot\) Begin with the connected sum on plain knots (don't talk about modding by 1T 4T yet).
+	
+	\(\cdot\) This induces a connected sum on singular knots (define via commutative diagram).
+	
+	\(\cdot\) This nearly induces a conntected sum on chord diagrams... except need to mod out by 4T and 1T which we were gonna do anyway.
+\end{mdframed}
 
-\begin{equation}
-	\label{eq:co4T}
-	\tag{\coft}
-	\ftsouth
-	\ - \ 
-	\fteast
-	\ -\ 
-	\ftnorth
-	\ + \ 
-	\ftwest
-	\ = \ 0.
-\end{equation}
-
-\begin{equation}
-	\label{eq:co1T}
-	\tag{\coot}
-	\otgraphic \ = \ 0
-\end{equation}
+There is also an interesting algebraic structure on the space of knots, \(\mathcal{K}_{0}\) which extends to chord diagrams.
 
 \begin{definition}
-	We define \(\mathcal{A}\), which is also known as the \textbf{space of chord diagrams} as
-	\[\mathcal{A} = \mathcal{D} / \textup{\ref{eq:co4T}}.\]
+	The \textbf{connected sum} of two knots \(K_{1}\) and \(K_{2}\) is defined by figure below (insert).
+
+	\begin{mdframed}
+		Insert figure and reference to it.
+	\end{mdframed}
 \end{definition}
+
+
+
+****
+
+	Just like with the \ref{eq:diff} and \ref{eq:codiff} relations, instead of studying functions on chord diagrams satisfying \ref{eq:4T} and \ref{eq:1T}, we prefer to study functions on spaces quotiented by relations on the objects.
+
+	\begin{equation}
+		\label{eq:co4T}
+		\tag{\coft}
+		\ftsouth
+		\ - \ 
+		\fteast
+		\ -\ 
+		\ftnorth
+		\ + \ 
+		\ftwest
+		\ = \ 0.
+	\end{equation}
+
+	\begin{equation}
+		\label{eq:co1T}
+		\tag{\coot}
+		\otgraphic \ = \ 0
+	\end{equation}
+
+	\begin{definition}
+		We define \(\mathcal{A}\), which is also known as the \textbf{space of chord diagrams} as
+		\[\mathcal{A} = \mathcal{D} / \textup{\ref{eq:co4T}}.\]
+	\end{definition}
 
 \begin{mdframed}
 	(Are we *free* to choose values on these? It feels like this is the point, but I keep hearing that it's open. What's the correct thing to say? Potentially there's a technical detail here.)
 \end{mdframed}
 
-\begin{mdframed}
-	Scaffold for this chapter.
-
-	\begin{itemize}
-		\item Begin with the connected sum on plain knots (don't talk about modding by 1T 4T yet).
-		\item This induces a connected sum on singular knots (define via commutative diagram).
-		\item This nearly induces a conntected sum on chord diagrams... except need to mod out by 4T and 1T which we were gonna do anyway.
-	\end{itemize}
-\end{mdframed}
 
 \begin{warning}
 	Elements of both \(\mathcal{A}\) and \(\mathcal{C}\) are called chord diagrams. From now, a chord diagram can be assumed to be an element of \(\mathcal{A}\) unless it is otherwise obvious.
